# open_anything_diffusion

./: .gitattributes  .gitignore  .gitmodules  README.md  demo.ipynb  playground.ipynb  pyproject.toml  trial.ipynb
configs/: _logging.yaml  eval.yaml  eval_history.yaml  eval_sim.yaml  eval_sim_gt.yaml  eval_sim_switch.yaml  train.yaml  train_synthetic.yaml
configs/dataset/: flowbot.yaml  synthetic.yaml  trajectory.yaml
configs/inference/: flowbot_artflownet.yaml  flowbot_pn++.yaml  trajectory_artflownet.yaml  trajectory_diffuser.yaml  trajectory_diffuser_dgdit.yaml  trajectory_diffuser_dit.yaml  trajectory_diffuser_hisdit.yaml  trajectory_diffuser_pn++.yaml  trajectory_diffuser_pndit.yaml  trajectory_his_latent_everywhere.yaml  trajectory_pn++.yaml
configs/model/: diffuser.yaml  diffuser_dgdit.yaml  diffuser_dit.yaml  diffuser_hisdit.yaml  diffuser_hispndit.yaml  (+3 more)
docs/: mkdocs.yml
notebooks/: check_dataset_identical.ipynb  check_identical.ipynb  check_train_identical.ipynb  diffuser_inference.ipynb  diffuser_test_metrics.csv  diffuser_train_metrics.csv  diffuser_val_metrics.csv  diffusion.ipynb  evaluation_matrix.xlsx  flowbot_inference.ipynb  flowbot_simulation.ipynb  multimodal.ipynb  new_split.ipynb  results.ipynb  simu_results.ipynb  test_metrics.csv  train_metrics.csv  train_simple_diffusion.ipynb  val_metrics.csv  visualization.ipynb
pretrained/: door_half_half_dgdit.ckpt  door_half_half_dit.ckpt  door_half_half_flowbot.ckpt  fullset_half_half_dit.ckpt  fullset_half_half_flowbot.ckpt  fullset_half_half_pndit.ckpt
scripts/: eval.py  eval_diffuser.py  eval_diffuser_wta.py  eval_history_diffuser_wta.py  eval_sim.py  eval_sim_diffuser.py  eval_sim_diffuser_history.py  eval_sim_gt.py  eval_sim_switch.py  movable_links_001.json  movable_links_005.json  movable_links_fullset_000.json  movable_links_fullset_001.json  movable_links_fullset_005.json  multimodal_diffuser.py  train.py  train_synthetic.py  umpnet_data_split_new.json  umpnet_object_list.json
simulations/: floating_vacuum_gripper.py  simulation.py
tests/: simulation_test.py  single_trajectory_test.py
(+160 files in other folders)
